--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCtype html>
 <html>
     <head>
-        <title>Realtime Markdown Viewer</title>
+        <title>Web Markdown Editor</title>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
     </head>
